@@ -33,6 +33,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #8581: logging: removed errors raised when closing handlers twice.
+
 - Issue #4687: Fix accuracy of garbage collection runtimes displayed with
   gc.DEBUG_STATS.
 
